Smart HTTP VM Access Helper (#1681)
* add vm http address pipe

* add smart link component with polling

* implement http access helper

* http access helper (wip)

* add tests for http access helper

* add http helper endpoint to config files

* markup improvements

* encode url param

* translation

* take helper vars from env

* improve wording for the notice

* supply http access helper with the built in docker image

* add README for the helper

* extract helper port to config file

* fix cookies rewriting script

Co-authored-by: features94 <36263814+features94@users.noreply.github.com>

--- a/src/app/vm/vm-actions/vm-actions-component/vm-access.component.scss
+++ b/src/app/vm/vm-actions/vm-actions-component/vm-access.component.scss
@@ -25,3 +25,11 @@ p {
   color: $error-message-color;
   display: block;
 }
+
+.http-access-link-row {
+  display: flex;
+}
+
+cs-vm-http-access-link {
+  margin-left: 5px;
+}
