--- a/src/app/vm/vm-actions/vm-actions-component/vm-access.component.html
+++ b/src/app/vm/vm-actions/vm-actions-component/vm-access.component.html
@@ -76,13 +76,13 @@
       </p>
 
       <br />
-      <p>
+      <p class="http-access-link-row">
         <b>{{ 'VM_POST_ACTION.OPEN_URL' | translate }}:</b>
-        <ng-container *ngIf="isValidUrl(httpAccessService.getAddress(vm)); else invalidUrl">
-          <a class="action-link" (click)="openUrlVm(vm)"> {{ httpAccessService.getAddress(vm) }}</a>
+        <ng-container *ngIf="isValidUrl(vm | vmHttpAddress); else invalidUrl">
+          <cs-vm-http-access-link [vm]="vm"></cs-vm-http-access-link>
         </ng-container>
         <ng-template #invalidUrl>
-          {{ httpAccessService.getAddress(vm) }}
+          {{ vm | vmHttpAddress }}
           <span class="error-message"> {{ 'ERRORS.VM_POST_ACTION.INVALID_URL' | translate }} </span>
         </ng-template>
       </p>
