shrink the id input element

--- a/src/app/vm/shared/vm-destroy-dialog/vm-destroy-dialog.component.html
+++ b/src/app/vm/shared/vm-destroy-dialog/vm-destroy-dialog.component.html
@@ -7,7 +7,7 @@
         class="mat-body-1"
         [innerHTML]="'DIALOG_MESSAGES.VM.CONFIRM_VM_ID' | translate: { vmId: vmIdSlice }"
       ></div>
-      <mat-form-field class="confirm-input-field">
+      <mat-form-field>
         <input name="confirm-id" matInput ngModel required [csValueEqualTo]="vmIdSlice" />
       </mat-form-field>
     </section>
