show a spinner when login is in progress

--- a/src/app/auth/login.component.scss
+++ b/src/app/auth/login.component.scss
@@ -40,3 +40,9 @@
   margin: 15px auto !important;
   overflow: hidden;
 }
+
+.spinner-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
