--- a/src/app/auth/login.component.html
+++ b/src/app/auth/login.component.html
@@ -1,4 +1,4 @@
-<div class="flex-container" *ngIf="!loading">
+<div class="flex-container" *ngIf="ready">
   <img class="logo" src="img/cloudstack_logo.png" />
   <mat-card class="login">
     <form (ngSubmit)="onSubmit()" #loginForm="ngForm" novalidate>
@@ -49,9 +49,13 @@
           mat-button
           color="primary"
           type="submit"
-          [disabled]="passwordControl.invalid || usernameControl.invalid"
+          [disabled]="loading || passwordControl.invalid || usernameControl.invalid"
         >
-          {{ 'AUTH.LOGIN' | translate }}
+          <span *ngIf="loading; else loginText" class="spinner-container">
+            <!-- zero-width space so that line-height takes effect -->
+            &#8203;<mat-spinner diameter="25" strokeWidth="3"></mat-spinner>
+          </span>
+          <ng-template #loginText>{{ 'AUTH.LOGIN' | translate }}</ng-template>
         </button>
       </div>
     </form>
