add tests for loading indicator

--- a/src/app/auth/login.component.html
+++ b/src/app/auth/login.component.html
@@ -1,7 +1,7 @@
 <div class="flex-container" *ngIf="ready">
   <img class="logo" src="img/cloudstack_logo.png" />
   <mat-card class="login">
-    <form (ngSubmit)="onSubmit()" #loginForm="ngForm" novalidate>
+    <form (ngSubmit)="onSubmit()" novalidate>
       <div class="mat-dialog-content">
         <mat-form-field class="full-width-input" hideRequiredMarker>
           <input
