--- a/src/app/vm/vm-actions/vm-actions-component/password/password.component.html
+++ b/src/app/vm/vm-actions/vm-actions-component/password/password.component.html
@@ -1,5 +1,10 @@
 <ng-container *ngIf="password != null; else notSet">
-  <input [type]="visible ? 'text' : 'password'" [value]="password" size="1" readonly />
+  <input
+    [type]="visible ? 'text' : 'password'"
+    [value]="password"
+    [size]="password.length"
+    readonly
+  />
 
   <button mat-icon-button (click)="toggleVisibility()">
     <mat-icon
