check that vm has no snapshots before changing service offering

--- a/src/app/service-offering/service-offering-dialog/service-offering-dialog.component.scss
+++ b/src/app/service-offering/service-offering-dialog/service-offering-dialog.component.scss
@@ -1,5 +1,10 @@
 @import '../../../style/_variables';
 
+:host {
+  display: block;
+  width: 650px;
+}
+
 .service-offering-selector {
   padding-top: 10px;
   display: block;
