--- a/src/app/vm/vm-creation/vm-creation.component.html
+++ b/src/app/vm/vm-creation/vm-creation.component.html
@@ -83,6 +83,7 @@
                     <mat-select
                       name="zone"
                       [ngModel]="vmCreationState.zone"
+                      [compareWith]="compareZones"
                       (selectionChange)="zoneChange.emit($event.value)"
                     >
                       <mat-option *ngFor="let z of zones" [value]="z"> {{ z.name }} </mat-option>
