add notice with the available and required storage sizes

--- a/src/app/vm/vm-sidebar/storage-detail/volumes/snapshot-creation/snapshot-creation.component.html
+++ b/src/app/vm/vm-sidebar/storage-detail/volumes/snapshot-creation/snapshot-creation.component.html
@@ -1,8 +1,13 @@
 <ng-container *loading="loading">
-  <ng-container *ngIf="secondaryStorageQuotaFilled || snapshotsQuotaFilled; else form">
+  <ng-container *ngIf="storageQuotaFilled || snapshotsQuotaFilled; else form">
     <div class="mat-dialog-content">
-      <div *ngIf="secondaryStorageQuotaFilled">{{ 'Secondary storage filled' | translate }}</div>
-      <div *ngIf="!secondaryStorageQuotaFilled && snapshotsQuotaFilled">
+      <div *ngIf="storageQuotaFilled">
+        {{
+          'ERRORS.SNAPSHOT.STORAGE_EXCEEDED'
+            | translate: { available: storageAvailable, required: storageRequired }
+        }}
+      </div>
+      <div *ngIf="!storageQuotaFilled && snapshotsQuotaFilled">
         {{ 'ERRORS.SNAPSHOT.LIMIT_EXCEEDED' | translate }}
       </div>
     </div>
