--- a/src/app/template/template-creation/template-creation.component.html
+++ b/src/app/template/template-creation/template-creation.component.html
@@ -78,7 +78,7 @@
               [placeholder]="'TEMPLATE_PAGE.TEMPLATE_CREATION.LOCAL_FILE' | translate"
               [valuePlaceholder]="'FILE_INPUT.NO_FILE' | translate"
               required
-              [(ngModel)]="localTemplate"
+              [(ngModel)]="localTemplateInput"
               #localTemplateField="ngModel"
             ></ngx-mat-file-input>
             <mat-icon class="mdi-folder" matSuffix></mat-icon>
